# curriculum_1_teppei_jiromaru

./: README.md  requirements.txt
.github/workflows/: js-test.yml  main_finalbackendj.yml  os-check.yml
ci-task/: grade.js  grade.test.js  package-lock.json  package.json
docker-mysql/: .env  Dockerfile  docker-compose.yaml
docker-mysql/init/: init.sql
final-backend/: .gitignore  package-lock.json  setup.sh
final-backend/backend/: Dockerfile  docker-compose.yaml  init.sql  main.py  pyproject.toml  pyrightconfig.json
final-backend/backend/api/: db_postgres.py  main.py
final-backend/backend/api/cruds/: task.py
final-backend/backend/api/routers/: done.py  task.py
final-backend/backend/api/schemas/: done.py  task.py
final-backend/backend/tests/: test_main.py
final-backend/frontend/.github/workflows/: os-check.yml
final-backend/frontend/js2/: index.html
final-backend/frontend/js3/: index.html  script.js
final-backend/frontend/react-ts/my-app-ts/src/: App.tsx  GreetJs.jsx  GreetTS.tsx
final-backend/frontend/sanae-chatbot/src/: ChatPage.tsx
html/: index.html  styles.css
js1/: index.html  script.js
js2/: index.html  script.js
oscommand/: os_B.txt  os_C.txt
react-ts/my-app-ts/: package-lock.json
react/my-app/: package-lock.json
react/my-app/my-app-supabase/: index.html  package-lock.json  package.json
react/my-app/my-app-supabase/src/: App.jsx  supabaseClients.js
react/my-app/src/: App.js  MemoForm.js
sanae-chatbot/: package-lock.json  package.json
sanae-chatbot/src/: App.tsx  ChatPage.tsx  StartPage.tsx
